fix contact z-index

--- a/src/styles/layout/_portfolio.scss
+++ b/src/styles/layout/_portfolio.scss
@@ -98,7 +98,7 @@
       &.scale-up{
           transform: scale(5);
           margin-left: 0;
-  
+        z-index: 100;
       }
     }
   
